--- a/SQL-Part-2-Studio.ipynb
+++ b/SQL-Part-2-Studio.ipynb
@@ -63,28 +63,18 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Code here:"
+                "SELECT TOP 1 title, len(title) AS Title_Length\r\n",
+                "FROM books\r\n",
+                "ORDER BY len(title) DESC\r\n",
+                "\r\n",
+                ""
             ],
             "metadata": {
-                "azdata_cell_guid": "fc1a211d-ea4e-446a-bbf8-e31499c50aba"
+                "azdata_cell_guid": "fc1a211d-ea4e-446a-bbf8-e31499c50aba",
+                "language": "sql"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.111"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 1
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -103,28 +93,16 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Code here:"
+                "SELECT TOP 1 authors, len(authors) AS Authors_Length\r\n",
+                "FROM books\r\n",
+                "ORDER BY len(authors)"
             ],
             "metadata": {
-                "azdata_cell_guid": "61423c75-cb55-470f-b062-a1901d3da67c"
+                "azdata_cell_guid": "61423c75-cb55-470f-b062-a1901d3da67c",
+                "language": "sql"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.053"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 2
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -143,28 +121,17 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Code here:"
+                "--select * from books\r\n",
+                "SELECT count(title) AS Title_Count\r\n",
+                "FROM books\r\n",
+                "WHERE title like '%The%'"
             ],
             "metadata": {
-                "azdata_cell_guid": "f58433db-eb3b-46e0-bb4d-85ca52d359b5"
+                "azdata_cell_guid": "f58433db-eb3b-46e0-bb4d-85ca52d359b5",
+                "language": "sql"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.053"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 3
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -179,28 +146,17 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Code here:"
+                "--select * from books\r\n",
+                "SELECT count(authors) AS Authors_Count\r\n",
+                "FROM books\r\n",
+                "WHERE authors like 'Z%'"
             ],
             "metadata": {
-                "azdata_cell_guid": "850f04c8-458a-4cfb-95c4-4dbb7a3d63d0"
+                "azdata_cell_guid": "850f04c8-458a-4cfb-95c4-4dbb7a3d63d0",
+                "language": "sql"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.072"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 4
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -217,28 +173,16 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Code here:"
+                "SELECT COUNT(language_code) AS Count_language_code \r\n",
+                "FROM books\r\n",
+                "WHERE language_code NOT LIKE'%en%'"
             ],
             "metadata": {
-                "azdata_cell_guid": "5a85f5ae-dd59-4fa1-828a-c63fa330ff7f"
+                "azdata_cell_guid": "5a85f5ae-dd59-4fa1-828a-c63fa330ff7f",
+                "language": "sql"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.051"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 5
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -253,28 +197,16 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Code here:"
+                "SELECT count(SUBSTRING(language_code,1,2)) AS Count_language_code\r\n",
+                "FROM books\r\n",
+                "WHERE language_code NOT LIKE'%en%'"
             ],
             "metadata": {
-                "azdata_cell_guid": "7756ae02-4ec2-4456-b3a7-c3604bf07e26"
+                "azdata_cell_guid": "7756ae02-4ec2-4456-b3a7-c3604bf07e26",
+                "language": "sql"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:02.896"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 6
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -291,28 +223,18 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Code here:"
+                "SELECT title,authors,language_code,CONCAT(title,' by', authors, ' in ',language_code) AS Title_author_languagecode\r\n",
+                "FROM books\r\n",
+                "WHERE title IS NULL OR authors IS NULL OR language_code IS NULL\r\n",
+                ""
             ],
             "metadata": {
-                "azdata_cell_guid": "26705af1-6191-48b9-b649-7bc93cad102d"
+                "azdata_cell_guid": "26705af1-6191-48b9-b649-7bc93cad102d",
+                "language": "sql",
+                "tags": []
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.048"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 7
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -329,28 +251,16 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Code here:"
+                "SELECT title,authors,language_code,COALESCE(language_code,'UNKNOWN') AS Title_author_languagecode\r\n",
+                "FROM books\r\n",
+                "WHERE title IS NULL OR authors IS NULL OR language_code IS NULL"
             ],
             "metadata": {
-                "azdata_cell_guid": "f9694996-4545-48b9-9981-325b5c590570"
+                "azdata_cell_guid": "f9694996-4545-48b9-9981-325b5c590570",
+                "language": "sql"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.057"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 8
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -367,28 +277,18 @@
         {
             "cell_type": "code",
             "source": [
-                "-- Code here:"
+                "SELECT title,authors,language_code,ISNULL(language_code,'UNKNOWN') AS Title_author_languagecode\r\n",
+                "FROM books\r\n",
+                "WHERE title IS NULL OR authors IS NULL OR language_code IS NULL\r\n",
+                ""
             ],
             "metadata": {
-                "azdata_cell_guid": "a9670717-6dc6-4685-9f62-7a588753b4a9"
+                "azdata_cell_guid": "a9670717-6dc6-4685-9f62-7a588753b4a9",
+                "language": "sql",
+                "tags": []
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.056"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 9
+            "outputs": [],
+            "execution_count": null
         }
     ]
 }
